policies/kubernetes/gatekeeper/overlays/nsa-cisa/constraints/deny-hostnetwork.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyHostNetwork
metadata: { name: deny-hostnetwork }
spec:
  match: { kinds: [ { apiGroups: [""], kinds: ["Pod"] } ] }
