policies/kubernetes/gatekeeper/overlays/nsa-cisa/constraints/deny-hostpid.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyHostPID
metadata: { name: deny-hostpid }
spec:
  match: { kinds: [ { apiGroups: [""], kinds: ["Pod"] } ] }
