policies/kubernetes/gatekeeper/overlays/nsa-cisa/constraints/readonly-rootfs.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sReadOnlyRootFS
metadata: { name: readonly-rootfs }
spec:
  match: { kinds: [ { apiGroups: [""], kinds: ["Pod"] } ] }
