policies/kubernetes/gatekeeper/overlays/nsa-cisa/constraints/run-as-non-root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDropRoot
metadata: { name: run-as-non-root }
spec:
  match: { kinds: [ { apiGroups: [""], kinds: ["Pod"] } ] }
